--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -4,7 +4,6 @@
     <string name="action_mode_deselect_all">Deselectaţi tot</string>
     <string name="action_mode_select_all">Selectaţi tot</string>
     <string name="activity_parse_video_title">Lipiți link-ul videoclipului</string>
-    <string name="activity_rule">Reguli</string>
     <string name="ad_download">Descărcare</string>
     <string name="ad_downloading">Încărcare…</string>
     <string name="add_follow">Urmăriți</string>
@@ -108,6 +107,10 @@
     <string name="comment_added_tip">"Adăugați multe comentarii. Doriți să urmăriți această persoană?"</string>
     <string name="comment_delete_message">Comentariul va fi șters definitiv.</string>
     <string name="comment_delete_title">Ștergeți comentariul</string>
+    <string name="comment_fail">"Nu s-a putut publica comentariul; încercați din nou"</string>
+    <string name="comment_fail_banned_forever">"Ați fost banat definitiv pentru comentarii nepotrivite. Contactați grupul nostru QQ(374463568) pentru mai multe informații."</string>
+    <string name="comment_fail_banned_forever_positive">Am înțeles</string>
+    <string name="comment_fail_banned_temporary">"Ați fost banat temporar pentru comentarii nepotrivite"</string>
     <string name="comment_hint">Adăugați un comentariu</string>
     <string name="comment_reply">Răspuns %1$s: </string>
     <string name="compress_fail">Comprimarea a eşuat. Un fișier cu același nume există deja</string>
@@ -312,7 +315,6 @@
     <string name="message_praise_video">" au apreciat acest videoclip"</string>
     <string name="message_reply_prefix">Răspuns</string>
     <string name="message_reply_suffix">": "</string>
-    <string name="message_title">Mesajele mele</string>
     <string name="mi_router_label">Router</string>
     <string name="midrop_msg_1">Porniți Mi Drop pe celălalt telefon</string>
     <string name="midrop_msg_2">Când Mi Drop este pornit, puteți căuta alte dispozitive din apropiere și trimite fișiere</string>
@@ -420,14 +422,10 @@
     <string name="original_user_signal">Talent team</string>
     <string name="original_user_title">Felicitări pentru că ați devenit membru al echipei Talent team!</string>
     <string name="original_user_verify">• Vă mulțumim pentru că sunteți alături de noi!</string>
-    <string name="other_user_fans_tab">Fani</string>
     <string name="other_user_follow_tab">Urmăritori</string>
     <string name="other_user_liked_topic_tip">Niciun subiect</string>
-    <string name="other_user_liked_video_tab">Favorite</string>
     <string name="other_user_no_follow_tip">"Nu ați urmărit pe nimeni până acum."</string>
     <string name="other_user_no_liked_video_tip">Niciun videoclip apreciat.</string>
-    <string name="other_user_topic_tab">Subiecte</string>
-    <string name="other_user_video_tab">Încărcări</string>
     <string name="partial_cancel_successful">"Nu s-au putut elimina unele fișiere. Restul au fost mutate în %s."</string>
     <string name="partial_delete_failure">"Nu s-au putut șterge unele fișiere; reîncercați"</string>
     <string name="partial_encrypt_success">"Nu s-au putut ascunde unele fișiere; reîncercați"</string>
@@ -549,7 +547,6 @@
     <string name="select_video">Selectaţi videoclipurile</string>
     <string name="select_volume">Selectați volumul</string>
     <string name="send_comment">Trimiteți</string>
-    <string name="send_error">"Nu s-a putut adăuga comentariul"</string>
     <string name="send_sticker">Trimiteți sticker</string>
     <string name="send_to_qq">Trimiteți la QQ</string>
     <string name="send_to_weixin">Trimiteți la WeChat</string>
@@ -582,10 +579,6 @@
     <string name="share_to">Partajați la…</string>
     <string name="share_topic_desc">Încărcați videoclipuri pentru a primi premii</string>
     <string name="share_topic_title">"Urmăresc #%1$s#, aruncă o privire!"</string>
-    <string name="share_youliao1">Actualizați pentru a urmări mai multe episoade.</string>
-    <string name="share_youliao2">Actualizați pentru a urmări mai multe episoade.</string>
-    <string name="share_youliao3">Actualizați pentru a urmări mai multe episoade.</string>
-    <string name="share_youliao4">Actualizați pentru a urmări mai multe episoade.</string>
     <string name="shared_sticker_network_permission_tip">"Nu s-a putut conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="shared_sticker_page_no_file">"Nu s-a putut conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="shared_sticker_str">Recente</string>
@@ -645,7 +638,6 @@
     <string name="topic_follow">Urmăriți</string>
     <string name="topic_followed">Urmărit</string>
     <string name="topic_message">&lt;font color=#fc7050&gt;%1$s: &lt;/font&gt;%2$s</string>
-    <string name="topic_winners">Câștigatorii anteriori</string>
     <string name="transfer_done">Fișierele au fost mutate.</string>
     <string name="transfer_private_data">Se transferă dosarele ascunse de pe cardul SD…</string>
     <string name="type_not_support">"Acest format de fișier nu este suportat. Dezarhivați fișierul și reîncercați."</string>
@@ -661,7 +653,6 @@
     <string name="unlogin">Conectați-vă mai întâi</string>
     <string name="unmount_inform_text">Demontaţi stocarea USB?</string>
     <string name="unreviewed_video_cannot_share">Videoclipurile trebuie revizuite înainte de a fi partajate</string>
-    <string name="update">Actualizare</string>
     <string name="update_failed">"Nu s-a putut salva, încercați din nou"</string>
     <string name="update_loading">Salvare…</string>
     <string name="upload_avatar_camera">Cameră</string>
@@ -701,12 +692,10 @@
     <string name="user_icon">Fotografie de profil</string>
     <string name="user_id_tip">ID: </string>
     <string name="user_info_setting">Editați informațiile</string>
-    <string name="user_like_text">Îi place</string>
     <string name="user_liked_video_title">Videoclipurile la care am dat like</string>
     <string name="user_login_dialog_cancle">Renunțare</string>
     <string name="user_login_dialog_tip">Conectați-vă pentru a încărca videoclipuri, pentru a participa la evaluări și pentru a putea câștiga premii</string>
     <string name="user_login_dialog_title">Conectați-vă</string>
-    <string name="user_message_text">Mesaje</string>
     <string name="user_nickname">Pseudonim</string>
     <string name="user_nickname_limit">Pseudonimul trebuie să aibă între 4–20 caractere</string>
     <string name="user_no_fans_tip">Niciun urmăritor</string>
@@ -739,7 +728,6 @@
     <string name="user_sex">Sex</string>
     <string name="user_sign">Semnătură</string>
     <string name="user_topic_text">Subiectele mele</string>
-    <string name="user_upload_text">Încărcări</string>
     <string name="user_video_text">Videoclipurile mele</string>
     <string name="utf8_summary">Codare prestabilită</string>
     <string name="utf8_title">UTF-8</string>
@@ -806,9 +794,6 @@
     <string name="weibo_str">Weibo</string>
     <string name="weixin_not_installed">"WeChat nu este instalată"</string>
     <string name="weixin_sticker_tag_str">Stickere</string>
-    <string name="welcome_to_my_page">Bine ați venit pe pagina mea</string>
-    <string name="welcome_to_my_page_1">Urmăriți-mă!</string>
-    <string name="welcome_to_my_page_2">Urmăriți-mă!</string>
     <string name="wifi_state">Reţea Wi-Fi</string>
     <string name="wxcircle_platform">Momente</string>
     <string name="xiaomi_btn_bind">Cont Mi</string>
@@ -827,9 +812,5 @@
 Urmăriți împreună cu 170 de milioane de fani Mi."</string>
     <string name="youliao_ad_title">Actualizat la versiunea completă!</string>
     <string name="youliao_ad_update">Actualizați</string>
-    <string name="youliao_dialog_msg">"Videoclipuri Populare a fost înlocuită cu \"Youliao\" 
-aplicație menită să vă aducă mai multă distracție!"</string>
-    <string name="youliao_dialog_title">Nu vă interesează videoclipurile?</string>
     <string name="youliao_master_rank">Topul Youliao</string>
-    <string name="zero">0</string>
 </resources>
