--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -124,7 +124,7 @@
     <string name="baby_nick_name">Pseudonim</string>
     <string name="baby_sexy">Sex</string>
     <string name="baby_suffix">copil</string>
-    <string name="backup_automatically_summary">Salvați toate fotografiile și videoclipurile de pe toate dispozitivele în MiCloud. Le puteți vedea, sorta, edita și partaja pe toate dispozitivele.</string>
+    <string name="backup_automatically_summary">Salvați toate fotografiile și videoclipurile de pe toate dispozitivele în MiCloud. Astfel le veți putea cu ușurință vedea, sorta, edita și partaja pe toate dispozitivele.</string>
     <string name="backup_automatically_title">Salvare automată</string>
     <string name="backup_battery_low_desc">Puteți alege să continuați sincronizarea elementelor</string>
     <string name="backup_battery_low_title">Sincronizarea a fost dezactivată datorită nivelului redus al acumulatorului</string>
@@ -134,6 +134,7 @@
     <string name="backup_cloud_space_low_title">Nu există suficient spațiu de stocare în Mi Cloud</string>
     <string name="backup_cta_not_allow">"Nu s-a putut accesa rețeaua"</string>
     <string name="backup_cta_not_allow_btn_text">Permiteți</string>
+    <string name="backup_detail_page_empty">Nicio fotografie sau videoclip nu așteaptă sincronizarea</string>
     <string name="backup_detail_page_title">Sincronizări Mi Cloud</string>
     <string name="backup_device_space_low_btn_text">Goliți</string>
     <string name="backup_device_space_low_desc">Eliberați spațiu pentru a continua sincronizarea elementelor</string>
@@ -141,7 +142,7 @@
     <string name="backup_dirty_num">Total: %s</string>
     <string name="backup_dirty_tip">Fotografiile și videoclipurile nu s-au sincronizat</string>
     <string name="backup_immediately">Sincronizați</string>
-    <string name="backup_need_sync_desc">Atingeți butonul pentru a continua sincronizarea</string>
+    <string name="backup_need_sync_desc">Atingeți pentru a continua sincronizarea</string>
     <string name="backup_need_sync_title">Sincronizare oprită</string>
     <string name="backup_no_network_btn_text">Setări de rețea</string>
     <string name="backup_no_network_desc">Conectați-vă la rețea pentru a continua sincronizarea elementelor</string>
@@ -167,7 +168,7 @@
     <string name="backuped_desc">Fotografiile și videoclipurile sunt sincronizate cu Mi Cloud</string>
     <string name="backuped_title">Sincronizate cu succes</string>
     <string name="backuping_title_gprs">Sincronizare utilizând datele mobile…</string>
-    <string name="backuping_title_normal">Sincronizați⤦</string>
+    <string name="backuping_title_normal">Sincronizare…</string>
     <string name="begin_share">S-a creat albumul copilului \"%s\", partajați-l chiar acum</string>
     <string name="begin_share_toast">Creați separat un Album al Copilului înainte de a-l partaja?</string>
     <string name="blank_app_name"/>
@@ -406,7 +407,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="ignore_alert_title">Ascundeţi acest album?</string>
     <string name="ignore_face">Ignoraţi această persoană</string>
     <string name="image_decode_failed">"Nu s-a putut decoda imaginea"</string>
-    <string name="image_download_item_title">Descărcaţi fotografia (%s)</string>
+    <string name="image_download_item_title">Descărcaţi fișierul original (%s)</string>
     <string name="image_invalid_path">Cale invalidă</string>
     <string name="image_not_found">"Nu s-a găsit imaginea"</string>
     <string name="image_quota_fulfiled">Prea multe imagini. Ştergeţi unele imagini şi încercaţi din nou.</string>
