--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -106,11 +106,12 @@ Glisați în jos pentru a actualiza sau verificați setările de rețea"</string
     <string name="indices_title_sport">Sport</string>
     <string name="indices_title_uv">Index UV</string>
     <string name="indices_title_visibility">Vizibilitate</string>
+    <string name="information_manager_default_weather_bg">Fundal implicit Meteo</string>
     <string name="information_manager_extension">Extensie meteo</string>
     <string name="information_manager_information">Informații despre vreme</string>
     <string name="information_manager_wlan">Actualizați în Wi-Fi</string>
     <string name="information_menu_title"/>
-    <string name="information_set">Setări pagină de start</string>
+    <string name="information_set">Alte setări</string>
     <string name="information_time_source">%1$s | %2$s</string>
     <string name="information_views"/>
     <string name="install">Instalați</string>
