--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -23,10 +23,10 @@
     <string name="action_item_share">Distribuiţi</string>
     <string name="action_settings">Setări</string>
     <string name="ad_close">Închideți</string>
-    <string name="ad_data_exception">Excepție date promoții !</string>
+    <string name="ad_data_exception">Eroare date promoții</string>
     <string name="ad_extension">Promoții</string>
     <string name="ad_mark">Reclame</string>
-    <string name="ad_recommend">Recomandări promoții</string>
+    <string name="ad_recommend">Recomandări</string>
     <string name="ad_setting">Setări serviciu reclame</string>
     <string name="add_music">Adăugaţi melodii</string>
     <string name="add_to_last_of_playlist">Adaugă la sfârșitul listei de redare</string>
@@ -69,13 +69,14 @@
     <string name="auto_payment">Reînnoire automată</string>
     <string name="auto_payment_date">Următoarea achitare: %s</string>
     <string name="auto_restart_under_wifi">Se va descărca în mod automat acest fișier atunci când veți fi conectat la Wi-Fi</string>
+    <string name="auto_upgrade">Actualizare automată</string>
     <string name="avail_services">Disponibil</string>
     <string name="available_playlist_name_format">Listă de redare nouă %d</string>
     <string name="avoid_to_use_traffic_summary">Nu se utilizează rețeaua de date mobile pentru a reda muzica</string>
     <string name="avoid_to_use_traffic_title">Notifică-mă atunci când se utilizează datele mobile pentru a reda muzică</string>
     <string name="back_confirm">Apăsați din nou pentru a trimite aplicația în fundal</string>
     <string name="backup_complete">Toate melodiile sunt sincronizate în Mi Cloud</string>
-    <string name="backup_empty_button">Ați selectat 0 melodii</string>
+    <string name="backup_empty_button">Nicio melodie selectată</string>
     <string name="backup_immediate">Creați o copie de rezervă</string>
     <string name="backup_song_title">Selectați melodiile pentru care doriți să realizați o copie de rezervă</string>
     <string name="baidu_music">Muzică Baidu</string>
@@ -111,15 +112,15 @@
     <string name="cloud_empty_message">Nicio melodie în Mi Cloud</string>
     <string name="cloud_empty_summary">Creați o copie de rezervă a melodiilor în Mi Cloud pentru a le putea accesa și de pe alte dispozitive</string>
     <string name="cloud_enable">Sincronizare muzică cu Mi Cloud</string>
-    <string name="cloud_loading_message">Căutare melodii...</string>
-    <string name="cloud_music">Muzică în Cloud</string>
+    <string name="cloud_loading_message">Căutare melodii…</string>
+    <string name="cloud_music">Melodii în Mi Cloud</string>
     <string name="cloud_settings">Setări sincronizare</string>
     <string name="cloud_space_full">Nu mai există spațiu de stocare disponibil</string>
     <string name="cloud_space_full_message">Nu mai există spațiu în Mi Cloud pentru a adăuga melodii noi. Pentru a obține spațiu de stocare suplimentar, actualizați contul Mi.</string>
     <string name="cloud_state_cloud_space_full">Nu există spațiu de stocare suficient în Mi Cloud, sincronizarea s-a oprit</string>
     <string name="cloud_state_low_power">Conectați încărcătorul pentru a relua sincronizarea</string>
-    <string name="cloud_state_network_data">Nu s-a găsit rețeaua Wi-Fi, sincronizarea s-a oprit</string>
-    <string name="cloud_state_network_unavailable">Nu s-a putut conecta la rețea, sincronizarea s-a oprit</string>
+    <string name="cloud_state_network_data">"Nu s-au găsit rețele Wi-Fi, sincronizarea s-a oprit"</string>
+    <string name="cloud_state_network_unavailable">"Nu s-a putut conecta la rețea, sincronizarea s-a oprit"</string>
     <string name="cloud_state_storage_full">Nu există suficient spațiu de stocare pe telefon, sincronizarea s-a oprit</string>
     <string name="cloud_welcome_message">Sincronizați melodiile</string>
     <string name="cloud_welcome_summary">Sincronizați melodiile în Mi Cloud și redați-le pe alte dispozitive</string>
@@ -179,11 +180,11 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="dialog_media_not_found">"Nu se poate descărca. Cardul SD nu este disponibil."</string>
     <string name="dialog_not_show_again">"Nu arăta din nou"</string>
     <string name="dialog_queued_body">Acest fișier este în coada de așteptare pentru descărcarea ulterioară.</string>
-    <string name="dialog_song_sort_type">Sortare după</string>
+    <string name="dialog_song_sort_type">Sortare melodii</string>
     <string name="dialog_song_sort_type_name">Nume</string>
-    <string name="dialog_song_sort_type_playing_times">Numărul redărilor</string>
-    <string name="dialog_song_sort_type_time">Dată</string>
-    <string name="dialog_song_view_type">Show type</string>
+    <string name="dialog_song_sort_type_playing_times">După numărul redărilor</string>
+    <string name="dialog_song_sort_type_time">După data adăugării</string>
+    <string name="dialog_song_view_type">Arată melodiile de pe telefon</string>
     <string name="dialog_song_view_type_album">Album</string>
     <string name="dialog_song_view_type_artist">Artist</string>
     <string name="dialog_song_view_type_folder">Dosar</string>
@@ -257,7 +258,7 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="download_share_dialog">Partajați prin</string>
     <string name="download_speed_null"/>
     <string name="download_start">Pornire descărcare…</string>
-    <string name="download_start_btn">Descărcare gratuită</string>
+    <string name="download_start_btn">Descărcare</string>
     <string name="download_success">Finalizată</string>
     <string name="download_title_sorted_by_date">Descărcări - Sortate după dată</string>
     <string name="download_title_sorted_by_size">Descărcări - Sortate după dimensiune</string>
@@ -360,19 +361,19 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="global_search_description_entry">Savurați muzică</string>
     <string name="global_search_description_hot">Actualizări săptămânale</string>
     <string name="global_search_description_radar">Recunoaștere melodii</string>
-    <string name="global_search_key_absolute">muzică pură; muzică soft</string>
+    <string name="global_search_key_absolute">instrumentală; muzică soft</string>
     <string name="global_search_key_buddha">Muzică budistă</string>
-    <string name="global_search_key_cantonese">listă de redare muzică cantoneză</string>
+    <string name="global_search_key_cantonese">muzică cantoneză</string>
     <string name="global_search_key_child">Cântece pentru copii</string>
-    <string name="global_search_key_classics">listă de redare muzică clasică</string>
+    <string name="global_search_key_classics">muzică clasică</string>
     <string name="global_search_key_entry">muzică;melodie;piesă</string>
     <string name="global_search_key_fm">radio online</string>
     <string name="global_search_key_hot">melodii populare</string>
-    <string name="global_search_key_internet">listă de redare online</string>
-    <string name="global_search_key_movie">listă de redare coloană sonoră filme</string>
+    <string name="global_search_key_internet">topuri online</string>
+    <string name="global_search_key_movie">coloane sonore</string>
     <string name="global_search_key_prenatal">muzică prenatală</string>
     <string name="global_search_key_radar">recunoaștere melodii</string>
-    <string name="global_search_title_absolute">Muzică pură</string>
+    <string name="global_search_title_absolute">Muzică instrumentală</string>
     <string name="global_search_title_buddha">Muzică budistă</string>
     <string name="global_search_title_cantonese">Muzică Cantoneză</string>
     <string name="global_search_title_child">"Cântecele pentru copii"</string>
@@ -380,8 +381,8 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="global_search_title_entry">Muzică</string>
     <string name="global_search_title_fm">Radio online</string>
     <string name="global_search_title_hot">Melodii populare</string>
-    <string name="global_search_title_internet">Muzică online</string>
-    <string name="global_search_title_movie">Coloană sonoră filme</string>
+    <string name="global_search_title_internet">Topuri online</string>
+    <string name="global_search_title_movie">Coloane sonore</string>
     <string name="global_search_title_prenatal">Muzică prenatală</string>
     <string name="global_search_title_radar">Recunoaștere melodii</string>
     <string name="group_artist">Trupe</string>
@@ -682,10 +683,10 @@ este oferit în principal de către Ultimate Inc."</string>
     <string name="root_downloads">Descărcări</string>
     <string name="save_to_playlist">Salvați ca listă de redare</string>
     <string name="search_album">Căutare albume</string>
-    <string name="search_empty">Niciun rezultat. Vă rugăm să încercați alte cuvinte</string>
+    <string name="search_empty">"Nu s-a găsit nimic"</string>
     <string name="search_for_album">Album</string>
     <string name="search_for_artist">Artist</string>
-    <string name="search_hint">Căutați artiști, melodii, albume, recomandări</string>
+    <string name="search_hint">Căutați artiști, melodii, albume și recomandări</string>
     <string name="search_history_clear_all">Goliți</string>
     <string name="search_instant_online_music">Online</string>
     <string name="search_lyric">Căutare versuri</string>
